--- a/01-ping.yml
+++ b/01-ping.yml
@@ -1,4 +1,5 @@
 - name: ping server
-  hosts: web
+  hosts: all
   tasks:
-  
+  - name: ping all the servers in inventory file
+    ansible.builtin.ping:
