--- a/05-vars-tasks.yml
+++ b/05-vars-tasks.yml
@@ -12,3 +12,7 @@
        fees: "15000/-"
       ansible.builtin.debug:
         msg: "Hi Team, we are learning {{course}}, the duration of course is {{duration}}. Amount to be paid is {{fees}}"
+
+    - name: printing details play level
+      ansible.builtin.debug:
+        msg: "Hi Team, we are learning {{course}}, the duration of course is {{duration}}. Amount to be paid is {{fees}}"
