--- a/05-vars-tasks.yml
+++ b/05-vars-tasks.yml
@@ -13,6 +13,6 @@
       ansible.builtin.debug:
         msg: "Hi Team, we are learning {{course}}, the duration of course is {{duration}}. Amount to be paid is {{fees}}"
 
-    - name: printing details play level
+    - name: printing variables play level
       ansible.builtin.debug:
         msg: "Hi Team, we are learning {{course}}, the duration of course is {{duration}}. Amount to be paid is {{fees}}"
