--- a/06-vars-file.yml
+++ b/06-vars-file.yml
@@ -5,4 +5,4 @@
   tasks:
     - name: display student details
       ansible.builtin.debug:
-        msg: "Hi Team, my first name is {{first_name}} middel name is {{middle_name}} last name is {{last_name}}. Date of Birth is {{DOB}}. I'm from {{Village}}"
+        msg: "Hi Team, my first name is {{first_name}} middle name is {{middle_name}} last name is {{last_name}}. Date of Birth is {{DOB}}. I'm from {{Village}}"
