--- a/09-vars-args.yml
+++ b/09-vars-args.yml
@@ -4,3 +4,5 @@
     - name: printing course
       ansible.builtin.debug:
         msg: "Hi Team, we are learning {{course}}, the duration of course is {{duration}}. Amount to be paid is {{fees}}"
+
+###  ansible-playbook 09-vars-args.yml -e course=DevOps -e duration=10hrs -e fees=1000 ###
