--- a/vars.yml
+++ b/vars.yml
@@ -3,3 +3,4 @@ middle_name: "Surya Manimohan"
 last_name: "Thuttagunta"
 DOB: "22-05-1995"
 Village: "Korumamidi"
+WISHES: "Hi from Variable FILE Level"
