--- a/10-vars-preferences.yml
+++ b/10-vars-preferences.yml
@@ -10,7 +10,16 @@
     private: false
   tasks:
     - name: printing preferences
-      vars:
-        WISHES: "HI from TASK Level"
+      # vars:
+      #   WISHES: "HI from TASK Level"
       ansible.builtin.debug:
         msg: "{{WISHES}}"
+
+#1. Arguments
+#ansible-playbook -i inventory.ini -e ansible_user=ec2-user -e ansible_password=DevOps321 10-vars-preferences.yml -e WISHES="HI-From-ARGS"
+
+#2. TASK Level
+#ansible-playbook -i inventory.ini -e ansible_user=ec2-user -e ansible_password=DevOps321 10-vars-preferences.yml
+#Please enter wishes: HI from Promt
+
+#3.
