--- a/10-vars-preferences.yml
+++ b/10-vars-preferences.yml
@@ -2,8 +2,8 @@
   hosts: localhost
   vars:
     WISHES: "Hi from PLAY Level"
-  vars_files:
-    - vars.yml
+  # vars_files:
+  #   - vars.yml
   vars_prompt:
   - name: WISHES
     prompt: Please enter wishes
@@ -22,4 +22,8 @@
 #ansible-playbook -i inventory.ini -e ansible_user=ec2-user -e ansible_password=DevOps321 10-vars-preferences.yml
 #Please enter wishes: HI from Promt
 
-#3.
+#3. Variable File Level
+#ansible-playbook -i inventory.ini -e ansible_user=ec2-user -e ansible_password=DevOps321 10-vars-preferences.yml
+#Please enter wishes: Hi from Prompt
+
+#4. 
