--- a/10-vars-preferences.yml
+++ b/10-vars-preferences.yml
@@ -1,7 +1,7 @@
 - name: Checking Variables Preferences
   hosts: localhost
-  vars:
-    WISHES: "Hi from PLAY Level"
+  # vars:
+  #   WISHES: "Hi from PLAY Level"
   # vars_files:
   #   - vars.yml
   # vars_prompt:
@@ -30,4 +30,6 @@
 #ansible-playbook -i inventory.ini -e ansible_user=ec2-user -e ansible_password=DevOps321 10-vars-preferences.yml
 #Please enter wishes: Hi from Prompt level
 
-#5. 
+#5. PLAY Level
+
+#6. 
