--- a/13-condition-filter.yml
+++ b/13-condition-filter.yml
@@ -1,10 +1,10 @@
 - name: Filter Conditions
-  hosts: mypc
+  hosts: localhost
   vars_prompt:
   - name: number
     prompt: Please Enter a number
     private: false
-- tasks:
+  tasks:
   - name: Verify Given Number is Less than 10 or not
     ansible.builtin.debug:
       msg: "Given number {{number}} is less than 10"
