--- a/14-filters.yml
+++ b/14-filters.yml
@@ -27,3 +27,11 @@
     - name: changing to lowercase
       ansible.builtin.debug:
         msg: "{{ name | lower }}"
+
+- name: remove duplicates
+  hosts: localhost
+  numbers: [1,2,3,4,4,5,5,6,7,7,7,9]
+  tasks:
+    - name: removing duplicate numbers from above list
+      ansible.builtin.debug:
+        msg: "{{ numbers | unique }}"
