--- a/14-filters.yml
+++ b/14-filters.yml
@@ -30,7 +30,8 @@
 
 - name: remove duplicates
   hosts: localhost
-  numbers: [1, 2, 3, 4, 4, 5, 5, 6, 7, 7, 7, 9]
+  vars:
+    numbers: [1, 2, 3, 4, 4, 5, 5, 6, 7, 7, 7, 9]
   tasks:
     - name: removing duplicate numbers from above list
       ansible.builtin.debug:
