--- a/16-loops2.yml
+++ b/16-loops2.yml
@@ -5,8 +5,8 @@
     - name: Install packages
       ansible.builtin.dnf:
         name: "{{item.name}}"
-        state: "{{ item.state }}"
+        state: "{{item.state}}"
       loop:
-        - { name="mysql", state=latest }
-        - { name="nginx", state=absent }
-        - { name="postfix", state=latest }
+        - { name: 'mysql', state: 'latest' }
+        - { name: 'nginx', state: 'absent' }
+        - { name: 'postfix', state: 'latest' }
